--- a/public/styles.css
+++ b/public/styles.css
@@ -1,16 +1,34 @@
-.app {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-#bookingPortal {
-  position: fixed;
-  right: 50px;
-  top: 100px;
-  z-index: 1;
+.app {
+  display: flex;
+  flex-flow: wrap;
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr); */
+  width: 100%;
 }
 
 #photoDisplay {
   margin-top: 80px;
+}
+
+#bookingPortal {
+  position: sticky;
+  margin: 20px;
+  margin-left: 500px;
+  top: 80px;
+  z-index: 1;
+}
+
+#listingInfo {
+  margin: 20px 168px;
+  width: 100px;
+}
+
+#reviews {
+  margin: 20px 168px;
+  padding: 0;
 }
